Import of MUDLER/Deeme-0.03 from CPAN.
gitpan-cpan-distribution: Deeme
gitpan-cpan-version:      0.03
gitpan-cpan-path:         MUDLER/Deeme-0.03.tar.gz
gitpan-cpan-author:       MUDLER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -27,7 +27,10 @@ DESCRIPTION
     allows you to define binding subs on different points in multiple
     applications, and execute them later, in another worker. It is handy if
     you have to attach subs to events that are delayed in time and must be
-    fixed. It is strongly inspired by (and a rework of) Mojo::EventEmitter.
+    fixed. It can act also like a jobqueue and It is strongly inspired by
+    (and a rework of) Mojo::EventEmitter.
+
+    Have a look at Deeme::Worker for the jobqueue functionality.
 
 EVENTS
     Deeme can emit the following events.
@@ -130,6 +133,6 @@ LICENSE
     under the same terms as Perl itself.
 
 SEE ALSO
-    Deeme::Backend::Memory, Deeme::Backend::Mango, Deeme::Backend::Meerkat,
-    Mojo::EventEmitter, Mojolicious
+    Deeme::Worker, Deeme::Backend::Memory, Deeme::Backend::Mango,
+    Deeme::Backend::Meerkat, Mojo::EventEmitter, Mojolicious
 
